--- a/css/style.css
+++ b/css/style.css
@@ -17,20 +17,16 @@ a {
   font-style: normal;
 }
 
-.header {
-  padding-bottom: 70px;
-}
-
-.header__bar {
+.bar {
   background-image: url("/img/back-rect-1-small.png");
   height: 85px;
 }
 
-.header__bar .bar__logo {
+.bar__logo {
   height: 85px;
 }
 
-.header__bar .bar__logo img {
+.bar__logo img {
   max-width: 100%;
   display: block;
   margin-left: auto;
@@ -39,8 +35,8 @@ a {
   border-right: 4px white solid;
 }
 
-.header__bar .bar__site-name {
-  font-family: Nokia, Roboto, Arial, sans-serif;
+.bar__site-name {
+  font-family: 'Nokia', 'Roboto', Arial, sans-serif;
   color: #393939;
   font-size: 26px;
   font-weight: 700;
@@ -49,7 +45,7 @@ a {
   margin-bottom: 0px;
 }
 
-.header__bar .bar__site-subtitle {
+.bar__site-subtitle {
   margin-top: 0px;
   font-family: Roboto;
   font-size: 14px;
@@ -57,27 +53,23 @@ a {
   color: #f64747;
 }
 
-.header__bar .call-me {
+.bar .call-me {
   text-align: right;
   margin-top: 15px;
 }
 
-.header__bar .call-me__phone {
+.bar .call-me__phone {
   color: #393939;
   font-weight: 400;
   font-size: 16px;
 }
 
-.header__bar .call-me__phone_big {
+.bar .call-me__phone_big {
   font-size: 1.3em;
   font-weight: bold;
 }
 
-.header__bar .call-me__request {
-  margin-top: -5px;
-}
-
-.header__bar .call-me__icon, .header__bar .call-me__arrow, .header__bar .call-me__text {
+.bar .call-me__icon, .bar .call-me__arrow, .bar .call-me__text {
   display: inline;
   margin-left: 2px;
   height: 15px;
@@ -85,29 +77,33 @@ a {
   padding-top: 0;
 }
 
-.header__bar .call-me__icon {
+.bar .call-me__icon {
   width: 15px;
 }
 
-.header__bar .call-me__arrow {
+.bar .call-me__arrow {
   color: #f64747;
   font-size: 20px;
 }
 
-.header__bar .call-me__text {
+.bar .call-me__text {
   font-size: 14px;
   font-weight: 300;
   color: #f64747;
   border-bottom: 1px dashed #f64747;
 }
 
-.header__bar .call-me__text:hover {
+.bar .call-me__text:hover {
   border-style: none;
   cursor: pointer;
 }
 
+.header {
+  padding-bottom: 70px;
+}
+
 .header__title {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: 'Roboto Condensed', 'Roboto', sans-serif;
   text-align: center;
   margin-top: 40px;
   margin-bottom: 10px;
@@ -121,7 +117,7 @@ a {
   text-align: center;
   margin-top: 10px;
   color: #272727;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: 'Roboto Condensed', 'Roboto', sans-serif;
   font-size: 22px;
   font-weight: 600;
   text-transform: uppercase;
@@ -158,16 +154,20 @@ a {
 
 .offer::after {
   position: absolute;
-  content: url("/img/header-grains.png");
+  height: 300px;
+  width: 18vw;
+  background: url("/img/header-grains.png") no-repeat right bottom;
+  background-size: contain;
+  content: '';
   bottom: 10%;
-  left: 240px;
+  left: 236px;
   z-index: -2;
 }
 
 .offer__title {
   text-align: center;
   color: #fdf1cf;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: 'Roboto Condensed', 'Roboto', sans-serif;
   font-size: 16px;
   text-transform: uppercase;
 }
@@ -212,7 +212,7 @@ a {
   margin-top: 12px;
   height: 57px;
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.09);
-  font-family: "Roboto Condensed";
+  font-family: 'Roboto Condensed', 'Roboto', sans-serif;
   color: #ffffff;
   font-size: 18px;
   font-weight: 600;
@@ -254,7 +254,7 @@ a {
   text-align: center;
   text-transform: uppercase;
   color: #1b1b1b;
-  font-family: "Roboto Condensed";
+  font-family: 'Roboto Condensed', 'Roboto', sans-serif;
   font-size: 32px;
   font-weight: 400;
 }
@@ -268,7 +268,7 @@ a {
 }
 
 .our-foto {
-  background-color: #f3e2b6;
+  background-color: #fcf2d1;
 }
 
 .our-foto__text {
@@ -329,6 +329,38 @@ a {
   border-radius: 5px;
 }
 
+.advantages {
+  background-color: #fcf2d1;
+}
+
+.advantages__item {
+  color: #1b1b1b;
+  margin-bottom: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.advantages__icon {
+  float: left;
+  margin-top: 7px;
+}
+
+.advantages__title {
+  font-size: 18px;
+  font-weight: bold;
+  width: 77%;
+  margin: 5px 0 8px auto;
+}
+
+.advantages__text {
+  font-size: 15px;
+  font-weight: 300;
+  margin-top: 8px;
+  margin-left: auto;
+  margin-right: 0;
+  width: 77%;
+}
+
 @media (max-width: 1419px) {
   .offer::after, .our-foto__slider::before, .plus-in-video__video::after {
     position: auto;
@@ -344,6 +376,19 @@ a {
   }
   .offer {
     width: 100%;
+  }
+  .advantages__item {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .advantages__icon {
+    width: 17%;
+  }
+  .advantages__title {
+    width: 80%;
+  }
+  .advantages__text {
+    width: 80%;
   }
 }
 
@@ -392,22 +437,23 @@ a {
 }
 
 @media (max-width: 767px) {
-  .header__bar .bar__logo img {
+  .bar__logo img {
     margin-right: auto;
   }
-  .header__bar .bar__site-name {
+  .bar__site-name {
     margin-top: 10px;
     font-size: 23px;
   }
-  .header__bar .bar__site-subtitle {
+  .bar__site-subtitle {
     font-size: 12px;
   }
-  .header__bar .call-me {
-    margin-top: 10px;
+  .bar .call-me {
+    margin-top: 15px;
     padding: 0;
+    font-size: 14px;
   }
-  .header__bar .call-me__phone, .header__bar .call-me__text {
-    font-size: 12px;
+  .bar .call-me__icon, .bar .call-me__arrow {
+    display: none;
   }
   .offer {
     max-width: 500px;
@@ -421,26 +467,27 @@ a {
 }
 
 @media (max-width: 575px) {
-  .header__bar {
+  .bar {
     height: 80px;
   }
-  .header__bar .bar__site-name {
+  .bar__site-name {
     margin-top: 15px;
+    margin-left: -15px;
   }
-  .header__bar .bar__site-subtitle {
+  .bar__site-subtitle {
     display: none;
   }
-  .header__bar .call-me {
+  .bar .call-me {
     padding: 0 15px;
     margin-left: auto;
-    margin-right: 0;
+    margin-right: 15px;
     margin-top: -40px;
     text-align: left;
   }
-  .header__bar .call-me__phone {
+  .bar .call-me__phone {
     font-size: 12px;
   }
-  .header__bar .call-me__request {
+  .bar .call-me__request {
     display: none;
   }
   .header__title {
@@ -507,7 +554,8 @@ a {
     padding-bottom: 25px;
   }
   .section__title {
-    font-size: 22px;
+    font-size: 28px;
+    font-weight: 500;
     text-transform: none;
   }
   .section__subtitle-image {
@@ -515,5 +563,20 @@ a {
   }
   .our-foto__text {
     font-size: 14px;
+  }
+  .advantages {
+    text-align: center;
+  }
+  .advantages__icon {
+    width: 30%;
+    float: none;
+  }
+  .advantages__title {
+    font-size: 20px;
+    font-weight: normal;
+  }
+  .advantages__title, .advantages__text {
+    width: auto;
+    margin-left: auto;
   }
 }
