--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ a {
   text-decoration: none;
 }
 
+* {
+  outline: none;
+}
+
 @font-face {
   font-family: 'Nokia';
   src: url("/fonts/Nokia-Sans-S60-Regular.ttf") format("truetype");
@@ -359,6 +363,63 @@ a {
   margin-left: auto;
   margin-right: 0;
   width: 77%;
+}
+
+.catalog .section__subtitle-image {
+  margin-bottom: 5px;
+}
+
+.catalog__card {
+  padding: 10px 15px 23px;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border: 1px solid transparent;
+}
+
+.catalog__card:hover {
+  border-color: #d6d6d6;
+}
+
+.product {
+  text-align: center;
+}
+
+.product__image {
+  max-width: 100%;
+  height: 120px;
+}
+
+.product__name {
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.product__text {
+  color: #1b1b1b;
+  font-size: 15px;
+  font-weight: 300;
+  margin-top: 5px;
+}
+
+.product__button {
+  padding: 15px 20px;
+  margin-top: 5px;
+  background-color: transparent;
+  border: 1px solid #f64747;
+  color: #f64747;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.product__button:hover {
+  background-color: #f64747;
+  color: #ffffff;
 }
 
 @media (max-width: 1419px) {
