--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,6 +7,8 @@ body
     margin: 0
 a
     text-decoration: none
+*
+    outline: none
 
     // Шрифт Nokia для названия сайта в шапке
 @font-face
@@ -276,6 +278,49 @@ a
         margin-left: auto
         margin-right: 0
         width: 77%
+
+
+.catalog
+    .section__subtitle-image
+        margin-bottom: 5px
+    &__card
+        padding: 10px 15px 23px
+        transition: .4s
+        border: 1px solid transparent
+        &:hover
+            border-color: #d6d6d6
+
+.product
+    text-align: center
+
+    &__image
+        max-width: 100%
+        height: 120px
+    &__name
+        font-size: 18px
+        font-weight: bold
+        text-transform: uppercase
+        margin-top: 5px
+        margin-bottom: 5px
+    &__text
+        color: #1b1b1b
+        font-size: 15px
+        font-weight: 300
+        
+        margin-top: 5px
+    &__button
+        padding: 15px 20px
+        margin-top: 5px
+        background-color: transparent
+        border: 1px solid $accent
+        color: $accent
+        font-size: 14px
+        font-weight: bold
+        text-transform: uppercase
+        transition: .4s
+        &:hover
+            background-color: $accent
+            color: #ffffff
 
 @media (max-width: 1419px)
     // адаптация псевдоэлементов и вылезания за рамки картинок
