--- a/sass/style.sass
+++ b/sass/style.sass
@@ -191,7 +191,7 @@ a
 
 .section
     padding-top: 50px
-    padding-bottom: 60px
+    padding-bottom: 50px
     &__title
         margin-top: 0
         margin-bottom: 10px
@@ -279,7 +279,6 @@ a
         margin-right: 0
         width: 77%
 
-
 .catalog
     .section__subtitle-image
         margin-bottom: 5px
@@ -290,9 +289,10 @@ a
         &:hover
             border-color: #d6d6d6
 
+.section.catalog, .section.advantages
+    padding-bottom: 30px
 .product
     text-align: center
-
     &__image
         max-width: 100%
         height: 120px
@@ -321,6 +321,22 @@ a
         &:hover
             background-color: $accent
             color: #ffffff
+
+.many-bread
+    &__row
+        width: 100%
+    &__item
+        width: 16.665%
+        display: block
+        float: left
+        img
+            width: 100%
+            display: block
+            transition: .6s
+            filter: grayscale(80%)
+            // filter: sepia(150%)
+            &:hover
+                filter: grayscale(0%)
 
 @media (max-width: 1419px)
     // адаптация псевдоэлементов и вылезания за рамки картинок
@@ -378,6 +394,11 @@ a
         right: -20px
         width: 120%
 
+    .many-bread__item
+        width: 20%
+        &:last-child
+            display: none
+
 @media (max-width: 991px)
     .offer
         width: 400px
@@ -409,6 +430,11 @@ a
             content: ''
             bottom: 0
             left: 0
+
+    .many-bread__item
+        width: 25%
+        &:first-child
+            display: none
 
 @media (max-width: 575px)
     .bar
@@ -498,3 +524,8 @@ a
         &__title, &__text
             width: auto
             margin-left: auto
+
+    .many-bread__item
+        width: 33.33%
+        &:nth-child(2)
+            display: none
