--- a/sass/style.sass
+++ b/sass/style.sass
@@ -344,6 +344,9 @@ a, button, input
             width: 450px
 
 .many-bread
+    height: auto
+    margin-bottom: -5px
+    display: inline-block
     &__row
         width: 100%
     &__item
@@ -358,6 +361,20 @@ a, button, input
             // filter: sepia(150%)
             &:hover
                 filter: grayscale(0%)
+
+footer
+    padding-top: 35px
+    padding-bottom: 40px
+    min-height: 150px
+    background-color: #363636
+    color: #fefefe
+    font-size: 15px
+    font-weight: 300
+    text-align: center
+    img
+        margin-top: 30px
+        margin-left: auto
+        margin-right: auto
 
 @media (max-width: 1419px)
     // адаптация псевдоэлементов и вылезания за рамки картинок
