Добавила блок с картой и сделала ее адаптивной (карта в виде картинки).

--- a/css/style.css
+++ b/css/style.css
@@ -457,8 +457,6 @@ a, button, input {
 
 .many-bread {
   height: auto;
-  margin-bottom: -5px;
-  display: inline-block;
 }
 
 .many-bread__row {
@@ -485,9 +483,23 @@ a, button, input {
           filter: grayscale(0%);
 }
 
+.map {
+  width: 100%;
+  height: 500px;
+  background: url("/img/map.png") center center no-repeat;
+  background-size: cover;
+  display: inline-block;
+}
+
+.map img {
+  width: 100%;
+  display: none;
+}
+
 footer {
   padding-top: 35px;
   padding-bottom: 40px;
+  margin-top: -5px;
   min-height: 150px;
   background-color: #363636;
   color: #fefefe;
@@ -569,6 +581,9 @@ footer img {
   .many-bread__item:last-child {
     display: none;
   }
+  .map {
+    height: 400px;
+  }
 }
 
 @media (max-width: 991px) {
@@ -625,6 +640,9 @@ footer img {
   }
   .many-bread__item:first-child {
     display: none;
+  }
+  .map {
+    height: 350px;
   }
 }
 
@@ -749,5 +767,8 @@ footer img {
   }
   .many-bread__item:nth-child(2) {
     display: none;
+  }
+  .map {
+    height: 250px;
   }
 }
