--- a/css/style.css
+++ b/css/style.css
@@ -138,91 +138,54 @@ a, button, input {
   width: 750px;
 }
 
-.offer {
-  width: 310px;
-  border: 5px solid #fdf1cf;
-  background-color: #f64747;
-  padding: 10px 20px 20px;
-  position: relative;
-}
-
-.offer::before {
-  position: absolute;
-  content: url("/img/header-offer-shadow.png");
-  bottom: -8px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  z-index: -1;
-}
-
-.offer::after {
-  position: absolute;
-  height: 300px;
-  width: 18vw;
-  background: url("/img/header-grains.png") no-repeat right bottom;
-  background-size: contain;
-  content: '';
-  bottom: 10%;
-  left: 236px;
-  z-index: -2;
-}
-
-.offer__title {
-  text-align: center;
-  color: #fdf1cf;
-  font-family: 'Roboto Condensed', 'Roboto', sans-serif;
-  font-size: 16px;
-  text-transform: uppercase;
-}
-
-.offer-form input, .offer-form button {
-  display: block;
-  width: 100%;
+.offer input, .offer button {
   border-radius: 5px;
-  outline: none;
+  border: none;
 }
 
-.offer-form input {
+.offer input {
   height: 45px;
   color: #292929;
   font-size: 14px;
   margin-bottom: 7px;
-  border-radius: 5px;
-  border: none;
   padding: 10px 40px 10px 15px;
   background-position: 95% center;
   background-repeat: no-repeat;
 }
 
-.offer-form input:placeholder {
+.offer input:placeholder {
   color: #2f2f2f;
 }
 
-.offer-form__name {
+.offer__name {
   background-image: url("/img/icon-name.png");
 }
 
-.offer-form__mail {
+.offer__mail {
   background-image: url("/img/icon-mail.png");
 }
 
-.offer-form__phone {
+.offer__phone {
   background-image: url("/img/icon-tel.png");
 }
 
-.offer-form__submit {
-  border: none;
-  margin-top: 12px;
+.offer__submit {
   height: 57px;
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.09);
   font-family: 'Roboto Condensed', 'Roboto', sans-serif;
   color: #ffffff;
   font-size: 18px;
   font-weight: 600;
   text-transform: uppercase;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#03c9a9), to(#13efcb));
-  background-image: linear-gradient(to top, #03c9a9 0%, #13efcb 100%);
+  -webkit-transition: .9s;
+  transition: .9s;
+  -webkit-box-shadow: 0 -30px 40px 0 #029678 inset;
+          box-shadow: 0 -30px 40px 0 #029678 inset;
+  background-color: #13efcb;
+}
+
+.offer__submit:hover {
+  -webkit-box-shadow: 0 -40px 50px 0 rgba(2, 174, 149, 0.05) inset;
+          box-shadow: 0 -40px 50px 0 rgba(2, 174, 149, 0.05) inset;
 }
 
 .offer-confident {
@@ -245,6 +208,91 @@ a, button, input {
   font-size: 11px;
   font-weight: 400;
   width: 75%;
+}
+
+.top-offer {
+  width: 315px;
+  border: 5px solid #fdf1cf;
+  background-color: #f64747;
+  padding: 10px 20px 20px;
+  position: relative;
+}
+
+.top-offer::before {
+  position: absolute;
+  content: url("/img/header-offer-shadow.png");
+  bottom: -8px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  z-index: -1;
+}
+
+.top-offer::after {
+  position: absolute;
+  height: 300px;
+  width: 18vw;
+  background: url("/img/header-grains.png") no-repeat right bottom;
+  background-size: contain;
+  content: '';
+  bottom: 10%;
+  left: 236px;
+  z-index: -2;
+}
+
+.top-offer__title {
+  text-align: center;
+  color: #fdf1cf;
+  font-family: 'Roboto Condensed', 'Roboto', sans-serif;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+.top-offer .offer-confident {
+  width: 100%;
+}
+
+.top-offer form input, .top-offer form button {
+  display: block;
+  width: 100%;
+}
+
+.top-offer form button {
+  margin-top: 12px;
+}
+
+.middle-offer {
+  background-image: url("/img/back-rect-7-small.png");
+}
+
+.middle-offer .section__subtitle-image {
+  background-image: url("/img/subtitle-logo-white.png");
+}
+
+.middle-offer .section__title {
+  color: white;
+}
+
+.middle-offer .offer-confident {
+  width: 265px;
+}
+
+.middle-offer form {
+  text-align: center;
+}
+
+.middle-offer form input, .middle-offer form button {
+  width: 265px;
+}
+
+.middle-offer form input {
+  display: inline-block;
+  margin: 12px;
+}
+
+.middle-offer form button {
+  display: block;
+  margin: 12px auto 0;
 }
 
 .section {
@@ -286,6 +334,8 @@ a, button, input {
 .our-foto__slider {
   position: relative;
   z-index: 2;
+  text-align: right;
+  padding-right: 20px;
 }
 
 .our-foto__slider::before {
@@ -298,9 +348,6 @@ a, button, input {
 
 .our-foto__slider img {
   max-width: 100%;
-  display: block;
-  margin-left: auto;
-  margin-right: 20px;
 }
 
 .plus-in-video__left-side {
@@ -514,10 +561,37 @@ footer img {
   margin-right: auto;
 }
 
+.shadow-bottom {
+  position: relative;
+  display: inline-block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.shadow-bottom::before {
+  position: absolute;
+  content: url("/img/shadow-left.png");
+  bottom: 0;
+  right: 100%;
+  width: 30px;
+}
+
+.shadow-bottom::after {
+  position: absolute;
+  content: url("/img/shadow-right.png");
+  bottom: 0;
+  left: 99.5%;
+  width: 30px;
+}
+
 @media (max-width: 1419px) {
-  .offer::after, .our-foto__slider::before, .plus-in-video__video::after {
+  .top-offer::after, .our-foto__slider::before, .plus-in-video__video::after {
     position: auto;
     content: none;
+  }
+  .top-offer {
+    width: 100%;
   }
   .plus-in-video__left-side img {
     right: -120px;
@@ -526,9 +600,6 @@ footer img {
   .plus-in-video__video img {
     margin-left: auto;
     margin-right: 0;
-  }
-  .offer {
-    width: 100%;
   }
   .advantages__item {
     padding-left: 0;
@@ -559,7 +630,7 @@ footer img {
   .header__subtitle {
     font-size: 18px;
   }
-  .offer {
+  .top-offer {
     width: 100%;
     display: block;
     margin-left: auto;
@@ -587,8 +658,12 @@ footer img {
 }
 
 @media (max-width: 991px) {
-  .offer {
-    width: 400px;
+  .top-offer {
+    width: 320px;
+  }
+  .middle-offer form input {
+    display: block;
+    margin: 0px auto 12px;
   }
   .plus-in-video__left-side {
     display: none;
@@ -620,14 +695,11 @@ footer img {
   .bar .call-me__icon, .bar .call-me__arrow {
     display: none;
   }
-  .offer {
+  .top-offer {
     max-width: 500px;
   }
-  .offer::before {
-    position: relative;
-    content: '';
-    bottom: 0;
-    left: 0;
+  .top-offer::before {
+    content: none;
   }
   .about__video {
     background: none;
@@ -677,9 +749,6 @@ footer img {
     font-size: 16px;
     text-transform: none;
   }
-  .offer {
-    width: 97%;
-  }
   .about__video {
     margin-top: 15px;
   }
@@ -721,6 +790,12 @@ footer img {
   }
   .header__bar .call-me__request {
     display: none;
+  }
+  .top-offer {
+    width: 100%;
+  }
+  .middle-offer form input, .middle-offer form button {
+    max-width: 100%;
   }
   .offer-confident {
     margin-bottom: 0;
