--- a/sass/style.sass
+++ b/sass/style.sass
@@ -103,75 +103,42 @@ a, button, input
             right: 20px
             width: 750px
     
+// Общий стиль для всех офферов (форм)
 .offer
-    width: 310px
-    border: 5px solid #fdf1cf
-    background-color: $accent
-    padding: 10px 20px 20px
-    position: relative
+    input, button
+        border-radius: 5px
+        border: none 
+    input
+        height: 45px
+        color: #292929
+        font-size: 14px
+        margin-bottom: 7px
+        padding: 10px 40px 10px 15px
+        background-position: 95% center
+        background-repeat: no-repeat
+        &:placeholder
+            color: #2f2f2f
     
-    &::before
-        position: absolute
-        content: url('/img/header-offer-shadow.png')
-        bottom: -8px
-        left: 50%
-        transform: translateX(-50%)
-        z-index: -1
-    &::after
-            position: absolute
-            height: 300px
-            width: 18vw
-            background: url('/img/header-grains.png') no-repeat right bottom
-            background-size: contain
-            content: ''
-            bottom: 10%
-            left: 236px
-            z-index: -2
-    &__title
-        text-align: center
-        color: #fdf1cf
+    &__name
+        background-image: url('/img/icon-name.png')
+    &__mail
+        background-image: url('/img/icon-mail.png')
+    &__phone
+        background-image: url('/img/icon-tel.png')
+
+    &__submit
+        height: 57px
         font-family: 'Roboto Condensed', 'Roboto', sans-serif
-        font-size: 16px
+        color: #ffffff
+        font-size: 18px
+        font-weight: 600
         text-transform: uppercase
+        transition: .9s
+        box-shadow: 0 -30px 40px 0 rgba(2,150,120,1) inset
+        background-color: #13efcb
+        &:hover
+            box-shadow: 0 -40px 50px 0 rgba(2,174,149,.05) inset
 
-    &-form
-        input, button
-            display: block
-            width: 100%
-            border-radius: 5px
-            outline: none
-        input
-            height: 45px
-            color: #292929
-            font-size: 14px
-            margin-bottom: 7px
-            border-radius: 5px
-            border: none
-            padding: 10px 40px 10px 15px
-            background-position: 95% center
-            background-repeat: no-repeat
-            &:placeholder
-                color: #2f2f2f
-        
-        &__name
-            background-image: url('/img/icon-name.png')
-        &__mail
-            background-image: url('/img/icon-mail.png')
-        &__phone
-            background-image: url('/img/icon-tel.png')
-
-        &__submit
-            border: none
-            margin-top: 12px
-            height: 57px
-            text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.09)
-            font-family: 'Roboto Condensed', 'Roboto', sans-serif
-            color: #ffffff
-            font-size: 18px
-            font-weight: 600
-            text-transform: uppercase
-            background-image: linear-gradient(to top, #03c9a9 0%, #13efcb 100%)
-        
     &-confident
         margin: 15px auto 10px
         height: 30px
@@ -189,6 +156,65 @@ a, button, input
             font-weight: 400
             width: 75%
 
+.top-offer
+    width: 315px
+    border: 5px solid #fdf1cf
+    background-color: $accent
+    padding: 10px 20px 20px
+    position: relative
+    
+    &::before
+        position: absolute
+        content: url('/img/header-offer-shadow.png')
+        bottom: -8px
+        left: 50%
+        transform: translateX(-50%)
+        z-index: -1
+    &::after
+        position: absolute
+        height: 300px
+        width: 18vw
+        background: url('/img/header-grains.png') no-repeat right bottom
+        background-size: contain
+        content: ''
+        bottom: 10%
+        left: 236px
+        z-index: -2
+    &__title
+        text-align: center
+        color: #fdf1cf
+        font-family: 'Roboto Condensed', 'Roboto', sans-serif
+        font-size: 16px
+        text-transform: uppercase
+    .offer-confident
+        width: 100%
+
+    form
+        input, button
+            display: block
+            width: 100%
+        button
+            margin-top: 12px
+
+.middle-offer
+    background-image: url('/img/back-rect-7-small.png')
+    .section__subtitle-image
+        background-image: url('/img/subtitle-logo-white.png')
+    .section__title
+        color: white
+    .offer-confident
+        width: 265px
+    form
+        text-align: center
+        input, button
+            width: 265px
+        input
+            display: inline-block
+            margin: 12px
+        button
+            display: block
+            margin: 12px auto 0
+    
 .section
     padding-top: 50px
     padding-bottom: 50px
@@ -220,6 +246,8 @@ a, button, input
     &__slider
         position: relative
         z-index: 2
+        text-align: right
+        padding-right: 20px
         &::before
             position: absolute
             content: url('/img/slider-back-grains-1.png')
@@ -228,9 +256,6 @@ a, button, input
             right: -10px
         img
             max-width: 100%
-            display: block
-            margin-left: auto
-            margin-right: 20px
 
 .plus-in-video
 
@@ -291,6 +316,7 @@ a, button, input
 
 .section.catalog, .section.advantages
     padding-bottom: 30px
+
 .product
     text-align: center
     &__image
@@ -385,12 +411,34 @@ footer
         margin-left: auto
         margin-right: auto
 
+.shadow-bottom
+    position: relative
+    display: inline-block
+    width: fit-content
+    &::before
+        position: absolute
+        content: url('/img/shadow-left.png')
+        bottom: 0
+        right: 100%
+        width: 30px
+        // z-index: -1
+    &::after
+        position: absolute
+        content: url('/img/shadow-right.png')
+        bottom: 0
+        left: 99.5%
+        width: 30px
+        // z-index: -1
+
 @media (max-width: 1419px)
     // адаптация псевдоэлементов и вылезания за рамки картинок
-    .offer::after, .our-foto__slider::before, .plus-in-video__video::after
+    .top-offer::after, .our-foto__slider::before, .plus-in-video__video::after
         position: auto
         content: none
 
+    .top-offer
+        width: 100%
+    
     .plus-in-video
         &__left-side img
             right: -120px
@@ -399,9 +447,6 @@ footer
             margin-left: auto
             margin-right: 0
 
-    .offer
-        width: 100%
-    
     .advantages
         &__item
             padding-left: 0
@@ -425,7 +470,7 @@ footer
             font-size: 45px
         &__subtitle
             font-size: 18px
-    .offer
+    .top-offer
         width: 100%
         display: block
         margin-left: auto
@@ -450,8 +495,12 @@ footer
         height: 400px
 
 @media (max-width: 991px)
-    .offer
-        width: 400px
+    .top-offer
+        width: 320px
+    .middle-offer form input
+        display: block
+        margin: 0px auto 12px
+
     .plus-in-video
         &__left-side
             display: none
@@ -476,13 +525,10 @@ footer
             font-size: 14px
             &__icon, &__arrow
                 display: none
-    .offer
+    .top-offer
         max-width: 500px
         &::before
-            position: relative
-            content: ''
-            bottom: 0
-            left: 0
+            content: none
 
     .about__video
         background: none
@@ -521,8 +567,6 @@ footer
     .header__subtitle
         font-size: 16px
         text-transform: none
-    .offer
-        width: 97%
 
     .about__video
         margin-top: 15px
@@ -553,7 +597,11 @@ footer
                 padding-left: 0
             .call-me__request
                 display: none
-    
+    .top-offer
+        width: 100%
+    .middle-offer form
+        input, button
+            max-width: 100%
     .offer-confident
         margin-bottom: 0
         &__text
